syntax = "proto3";

option go_package = "github.com/rtang03/grpc-server/core";

service GuploadService {
  rpc Upload(stream Chunk) returns (UploadStatus) {}
}

message Chunk {
  oneof data {
    bytes Content = 1;
    UploadFileInfo info = 2;
  }
}

message UploadFileInfo {
  string fileId = 1;
  string fileType = 2;
}

enum UploadStatusCode {
  Unknown = 0;
  Ok = 1;
  Failed = 2;
}

message UploadStatus {
  string Message = 1;
  UploadStatusCode Code = 2;
}
